--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.12.12"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
 urlencoding = "2.1.3"
