--- a/deno.json
+++ b/deno.json
@@ -5,11 +5,16 @@
     "imports": {
         "@logtape/logtape": "jsr:@logtape/logtape@^0.8.0",
         "@std/assert": "jsr:@std/assert@^1.0.10",
+        "@std/cli": "jsr:@std/cli@^1.0.14",
+        "@std/fs": "jsr:@std/fs@^1.0.14",
         "@std/path": "jsr:@std/path@^1.0.8",
         "hono": "jsr:@hono/hono@^4.6.15",
         "zod": "npm:zod@^3.24.1"
     },
     "fmt": {
         "indentWidth": 4
+    },
+    "tasks": {
+        "dev": "deno run -A --unstable-kv main.ts --auth-localhost --auth-interactive --no-logfile"
     }
 }
